--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -1,4 +1,4 @@
-$purple: #764abc;
+$purple: #966fd6;
 $break: 768px;
 
 .header {
@@ -16,7 +16,8 @@ $break: 768px;
     .cover-overlay {
       width: 100%;
       height: 100%;
-      background: linear-gradient(to top, rgba(118, 74, 188, 1), rgba(118, 74, 188, 0.2));
+      background: linear-gradient(to top, rgba(150, 111, 214, 1), rgba(150, 111, 214, 0.2));
+      border-bottom: $purple solid 1px;
     }
 
     .avatar {
@@ -29,40 +30,46 @@ $break: 768px;
       border-radius: 10px;
       bottom: calc(8vw - 200px);
       left: 15vw;
+      z-index: 1;
       @media all and (max-width: $break) {
         bottom: -100px;
         left: calc(50vw - 100px);
       }
     }
 
-    .media-social {
+    .name {
+      color: white;
       position: absolute;
-      bottom: calc(8vw - 240px);
-      left: calc(15vw + 20px);
+      font-size: 60px;
+      font-family: 'Dancing Script', cursive;
+      line-height: 1;
+      bottom: calc(4vw - 30px);
+      left: calc(25vw + 200px);
+      z-index: 1;
       @media all and (max-width: $break) {
-        bottom: calc(-5vw - 124px);
-        left: calc(50vw - 80px);
-      }
-
-      i {
-        color: white;
-        font-size: 24px;
-        margin: auto 8px;
+        font-size: 40px;
+        width: 100%;
+        bottom: calc(-5vw - 150px);
+        left: 0;
+        text-align: center;
       }
     }
 
-    .contact {
-      color: white;
+    .career {
+      color: $purple;
       position: absolute;
-      bottom: calc(8vw - 310px);
-      left: 15vw;
+      font-size: 30px;
+      line-height: 1;
+      bottom: calc(4vw - 115px);
+      left: calc(25vw + 230px);
+      z-index: 1;
       @media all and (max-width: $break) {
-        bottom: calc(-5vw - 200px);
-        left: calc(50vw - 100px);
-      }
-
-      i {
-        margin: 8px;
+        font-size: 20px;
+        color: white;
+        width: 100%;
+        bottom: calc(-5vw - 180px);
+        left: 0;
+        text-align: center;
       }
     }
   }
