Add github calendar

--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,13 @@
     transform: rotate(360deg);
   }
 }
+
+.body-info {
+  display: flex;
+}
+
+@media all and (max-width: 768px) {
+  .body-info {
+    display: block;
+  }
+}
