--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -1,12 +1,12 @@
-$purple: #ff7f50;
-$reduxPurple: #ff7066;
+$coral: #ff7f50;
+$darkCoral: #ff7066;
 $break: 768px;
 
 .header {
   width: 100%;
 
   .cover {
-    background: url("./img/coral-flower.jpg") no-repeat center center;
+    background: url("./img/living-coral-reef-cover.jpg") no-repeat center center;
     background-size: cover;
     position: relative;
     height: 20vw;
@@ -18,7 +18,7 @@ $break: 768px;
       width: 100%;
       height: 100%;
       background: linear-gradient(to top, rgba(255, 127, 80, 1), rgba(255, 127, 80, 0.2));
-      border-bottom: $purple solid 1px;
+      border-bottom: $coral solid 1px;
     }
 
     .avatar {
@@ -51,7 +51,7 @@ $break: 768px;
     }
 
     .career {
-      color: $reduxPurple;
+      color: $darkCoral;
       position: absolute;
       font-size: 30px;
       line-height: 1;
