--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -1,5 +1,4 @@
-$coral: #ff7f50;
-$darkCoral: #ff7066;
+$coral: #f88379;
 $break: 768px;
 
 .header {
@@ -17,7 +16,7 @@ $break: 768px;
     .cover-overlay {
       width: 100%;
       height: 100%;
-      background: linear-gradient(to top, rgba(255, 127, 80, 1), rgba(255, 127, 80, 0.2));
+      background: linear-gradient(to top, rgba(248, 131, 121, 1), rgba(248, 131, 121, 0.2));
       border-bottom: $coral solid 1px;
     }
 
@@ -51,7 +50,7 @@ $break: 768px;
     }
 
     .career {
-      color: $darkCoral;
+      color: $coral;
       position: absolute;
       font-size: 30px;
       line-height: 1;
