--- a/src/BasicInfo/BasicInfo.scss
+++ b/src/BasicInfo/BasicInfo.scss
@@ -72,7 +72,8 @@ $break: 768px;
       .info-italic {
         font-style: italic;
         text-align: right;
-        width: 100%;
+        width: 50%;
+        float: right;
       }
     }
 
