--- a/src/BasicInfo/BasicInfo.scss
+++ b/src/BasicInfo/BasicInfo.scss
@@ -17,6 +17,7 @@ $break: 768px;
 
   .media-social {
     margin: 0 calc(10vw + 16px);
+    display: flex;
     @media all and (max-width: $break) {
       margin: 0 calc(50vw - 88px);
     }
