--- a/src/BasicInfo/BasicInfo.scss
+++ b/src/BasicInfo/BasicInfo.scss
@@ -22,7 +22,7 @@ $break: 768px;
       margin: 0 calc(50vw - 88px);
     }
 
-    i {
+    span {
       color: white;
       font-size: 24px;
       margin: auto 8px;
@@ -40,7 +40,7 @@ $break: 768px;
       margin: 10px calc(50vw - 100px);
     }
 
-    i {
+    span {
       margin: 8px;
     }
 
