--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -1,11 +1,11 @@
-$coral: #f88379;
+$coral: #C39C84;
 $break: 768px;
 
 .header {
   width: 100%;
 
   .cover {
-    background: url("./img/living-coral-reef-cover.jpg") no-repeat center center;
+    background: url("./img/grandCanyon.jpg") no-repeat center top;
     background-size: cover;
     position: relative;
     height: 20vw;
@@ -16,7 +16,7 @@ $break: 768px;
     .cover-overlay {
       width: 100%;
       height: 100%;
-      background: linear-gradient(to top, rgba(248, 131, 121, 1), rgba(248, 131, 121, 0.2));
+      background: linear-gradient(to top, rgba(195, 156, 132, 1), rgba(195, 156, 132, 0.2));
       border-bottom: $coral solid 1px;
     }
 
