--- a/src/Background/Background.scss
+++ b/src/Background/Background.scss
@@ -10,6 +10,11 @@ $break: 768px;
   }
 
   .card-list {
+    .ant-list-item-meta-avatar {
+      img {
+        object-fit: contain;
+      }
+    }
     .ant-list-item-meta-content {
       flex: auto;
 
@@ -17,6 +22,10 @@ $break: 768px;
         white-space: pre-wrap;
         color: $coral;
         font-weight: bold;
+      }
+
+      img {
+        object-fit: contain;
       }
     }
 
@@ -28,6 +37,7 @@ $break: 768px;
         text-align: left;
         width: 100%;
       }
+
     }
   }
 }
