--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -5,7 +5,7 @@ $break: 768px;
   width: 100%;
 
   .cover {
-    background: url("./img/cover-photo.jpeg") no-repeat center center;
+    background: url("./img/1527839423059.jpg") no-repeat center center;
     background-size: cover;
     position: relative;
     height: 20vw;
@@ -16,7 +16,7 @@ $break: 768px;
     .cover-overlay {
       width: 100%;
       height: 100%;
-      background: linear-gradient(to top, rgba(103, 104, 172, 1), rgba(103, 104, 172, 0.2));
+      background: linear-gradient(to top, #3ea87b, rgba(103, 104, 172, 0.2));
       border-bottom: $coral solid 1px;
     }
 
@@ -35,7 +35,7 @@ $break: 768px;
       color: white;
       position: absolute;
       font-size: 60px;
-      font-family: 'Dancing Script', cursive;
+      // font-family: 'Dancing Script', cursive;
       line-height: 1;
       bottom: calc(4vw - 30px);
       left: calc(25vw + 200px);
